--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
+html,body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+
+}
+
+.sidebar {
+  float: left;
+  padding-right: 10px;
+  background: rgba(0, 0, 0, 0.5);
+  color: #ffffff;
+}
+
+.content {
+  margin-left: 120px;
 }
