--- a/src/pages/transition-demo/transition-demo.css
+++ b/src/pages/transition-demo/transition-demo.css
@@ -1,6 +1,6 @@
 .transition-demo-page {
 
-    margin: 20px 0 50px;
+    margin: 20px 0 200px;
 
 
 }
@@ -91,4 +91,27 @@
 
 .box02:hover {
     transform: translateX(-600px);
+}
+
+
+.like-box {
+    margin: 100px;
+    position: relative;
+}
+
+.heart {
+    position: absolute;
+    font-size: 50px;
+    color:red;
+}
+
+.like-heart {
+    opacity: 1;
+}
+
+.like-heart:hover {
+    transform-origin: center;
+    transform: scale(3);
+    opacity: 0;
+    transition: all 1s ease;
 }
