--- a/src/pages/grid-system/grid-system.css
+++ b/src/pages/grid-system/grid-system.css
@@ -3,11 +3,6 @@
     max-width: 1200px;
 }
 
-.grid-container * {
-    box-sizing: border-box;
-}
-
-
 /*-- our cleafix hack -- */
 .row:before,
 .row:after {
@@ -20,8 +15,9 @@
     float: left;
     min-height: 1px;
     width: 16.66%;
-    /*-- our gutter --*/
+    /*-- our gutter -- */
     padding: 12px;
+    box-sizing: border-box;
 }
 
 .col-1 {
@@ -37,7 +33,7 @@
 }
 
 .col-4 {
-    width: 66.664%;
+    width: 66.66%;
 }
 
 .col-5 {
@@ -48,4 +44,67 @@
     width: 100%;
 }
 
+
+/* responsive */
+
+@media all and (max-width:800px) {
+    .col-1 {
+        width: 33.33%;
+    }
+
+    .col-2 {
+        width: 50%;
+    }
+
+    .col-3 {
+        width: 83.33%;
+    }
+
+    .col-4 {
+        width: 100%;
+    }
+
+    .col-5 {
+        width: 100%;
+    }
+
+    .col-6 {
+        width: 100%;
+    }
+
+    .row .col-2:last-of-type {
+        width: 100%;
+    }
+
+    .row .col-5~.col-1 {
+        width: 100%;
+    }
+}
+
+
+@media all and (max-width:650px) {
+    .col-1 {
+        width: 50%;
+    }
+
+    .col-2 {
+        width: 100%;
+    }
+
+    .col-3 {
+        width: 100%;
+    }
+
+    .col-4 {
+        width: 100%;
+    }
+
+    .col-5 {
+        width: 100%;
+    }
+
+    .col-6 {
+        width: 100%;
+    }
+}
 
