--- a/src/pages/grid-system/index.css
+++ b/src/pages/grid-system/index.css
@@ -1,4 +1,14 @@
 [class*='col-'] {
     background: #a7c1e8;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+}
+
+
+/*-- some extra column content styling --*/
+[class*='col-']>p {
+    background-color:  #8ba6d0;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    color: white;
 }
